<resources>
    <string name="fingerband">Fingerband</string>
    <string name="shakey_shoes">Shakey Shoes</string>

    <string name="permission_fine_location">Access fine location</string>
    <string name="permission_read_external_storage">Read external storage</string>
    <string name="permission_write_external_storage">Write external storage</string>

    <string name="bluetooth_not_available">Bluetooth: Not available</string>
    <string name="bluetooth_not_enabled">Bluetooth: On</string>
    <string name="bluetooth_not_disabled">Bluetooth: Off</string>
    <string name="permissions_denied_list">Required permissions denied: %1$s</string>
    <string name="permission_button_enable">Enable permissions</string>
    <string name="permission_button_visit_settings">App settings</string>

    <string name="project_repo">Visit project repo</string>
    <string name="delete_all_buffers">Delete all buffers</string>

    <string name="buffer_item_page_3_accuracy_template">%d (%.2f%%)</string>

    <string name="buffer_item_page_1_mac">MAC:</string>
    <string name="buffer_item_page_1_status">Status:</string>
    <string name="buffer_item_page_1_pin">Pin:</string>
    <string name="buffer_item_page_1_baud">Baud:</string>
    <string name="buffer_item_page_1_baud_template">%d Bytes/s</string>
    <string name="buffer_item_page_1_max_size">%d bytes</string>
    <string name="buffer_item_page_1_free_heap_size">= %d bytes</string>
    <string name="buffer_item_page_1_latency">= %d ms</string>
    <string name="buffer_item_page_1_underflow_time">= %d ms</string>

    <string name="buffer_item_page_2_free_heap">Free heap:</string>
    <string name="buffer_item_page_2_refill_count">Refill count:</string>
    <string name="buffer_item_page_2_refill_size">Refill size:</string>
    <string name="buffer_item_page_2_window_size">Window size:</string>
    <string name="buffer_item_page_2_max_underflows">Max underflows:</string>
    <string name="buffer_item_page_2_apply">Apply</string>

    <string name="buffer_item_page_3_up_time">Up time:</string>
    <string name="buffer_item_page_3_successful_frames">Successful frames:</string>
    <string name="buffer_item_page_3_failed_frames">Failed frames:</string>

    <string name="select_device_dialog_title">Select a device</string>

    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>

    <!-- Config dialog UNUSED -->
    <string name="apply">Apply</string>
    <string name="dismiss">Dismiss</string>
    <string name="config">Config</string>

    <string name="disconnected">Disconnected</string>
    <string name="connecting">Connecting</string>
    <string name="setup">Setup</string>
    <string name="ready">Ready</string>
    <string name="paused">Paused</string>
    <string name="resumed">Resumed</string>
    <string name="unavailable">Bluetooth unavailable</string>
    <string name="disabled">Bluetooth disabled</string>
    <string name="not_found">Device not found</string>
    <string name="unknown_error">Error: Unknown</string>
    <string name="error_template">Error: %1$s</string>

    <string name="delete">Delete</string>
    <string name="delete_buffer_dialog_title">Delete buffer?</string>
    <string name="delete_buffer_dialog_message">This will disconnect the remote device</string>

    <string name="delete_all_buffers_dialog_title">Delete all buffers?</string>
    <string name="delete_all_buffers_dialog_message">This will disconnect all remote devices</string>
</resources>